--- a/BeBetterApp/MainWindow.xaml
+++ b/BeBetterApp/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<<Window x:Class="BeBetterApp.MainWindow"
+﻿<Window x:Class="BeBetterApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -19,9 +19,9 @@
     <Border CornerRadius="10" BorderThickness="1">
         <Border.BorderBrush>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="{StaticResource winBorderColor1}" Offset="0" />
-                <GradientStop Color="{StaticResource winBorderColor2}" Offset="0.5" />
-                <GradientStop Color="{StaticResource winBorderColor3}" Offset="1" />
+                <GradientStop Color="LightGray" Offset="0" />
+                <GradientStop Color="Gray" Offset="0.5" />
+                <GradientStop Color="DarkGray" Offset="1" />
             </LinearGradientBrush>
         </Border.BorderBrush>
 
