--- a/BeBetterApp/MainWindow.xaml
+++ b/BeBetterApp/MainWindow.xaml
@@ -12,25 +12,154 @@
         Background="Transparent"
         AllowsTransparency="True">
 
+    <Window.Resources>
+        <!-- Farben -->
+        <Color x:Key="winBorderColor1">#FF1B1446</Color>
+        <Color x:Key="winBorderColor2">#FF1B1446</Color>
+        <Color x:Key="winBorderColor3">#FF1B1446</Color>
+
+        <Color x:Key="secondaryBackColor1">#FF1B1446</Color>
+        <Color x:Key="secondaryBackColor2">#FF1F1A4E</Color>
+
+        <Color x:Key="primaryBackColor1">#FF1B1446</Color>
+        <Color x:Key="primaryBackColor2">#FF1B1446</Color>
+
+        <SolidColorBrush x:Key="titleColor2" Color="White"/>
+        <SolidColorBrush x:Key="color1" Color="#FFB3E5FC"/>
+        <SolidColorBrush x:Key="color2" Color="#FFB2DFDB"/>
+
+        <!-- TextStyle -->
+        <Style x:Key="menuButtonText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="10,0,0,0"/>
+        </Style>
+
+        <!-- ButtonStyle -->
+        <Style x:Key="menuButton" TargetType="RadioButton">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="RadioButton">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="8" Padding="5">
+                            <ContentPresenter />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter Property="Background" Value="#33FFFFFF"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#22FFFFFF"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
     <Window.DataContext>
-        <viewModel:MainViewModel />
+        <viewModel:MainViewModel/>
     </Window.DataContext>
 
     <Border CornerRadius="10" BorderThickness="1">
         <Border.BorderBrush>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="{StaticResource winBorderColor1}" Offset="0" />
-                <GradientStop Color="{StaticResource winBorderColor2}" Offset="0.5" />
-                <GradientStop Color="{StaticResource winBorderColor3}" Offset="1" />
+                <GradientStop Color="{StaticResource winBorderColor1}" Offset="0"/>
+                <GradientStop Color="{StaticResource winBorderColor2}" Offset="0.5"/>
+                <GradientStop Color="{StaticResource winBorderColor3}" Offset="1"/>
             </LinearGradientBrush>
         </Border.BorderBrush>
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+
+            <!-- Sidebar -->
+            <Border CornerRadius="10,0,0,10" Grid.Column="0">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0.7">
+                        <GradientStop Color="{StaticResource secondaryBackColor1}" Offset="0"/>
+                        <GradientStop Color="{StaticResource secondaryBackColor2}" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+
+                <StackPanel>
+                    <!-- Logo -->
+                    <StackPanel Orientation="Horizontal" Height="35" Margin="15,25,0,40">
+                        <Image Source="Icons/fitness.png" Height="30"/>
+                        <TextBlock Text="Be Better"
+                                   Foreground="{StaticResource titleColor2}"
+                                   FontSize="20"
+                                   FontFamily="Montserrat"
+                                   FontWeight="Medium"
+                                   VerticalAlignment="Center"
+                                   Margin="10,0,0,0"/>
+                    </StackPanel>
+
+                    <!-- Fitness -->
+                    <RadioButton Style="{StaticResource menuButton}"
+                                 Command="{Binding ShowFitnessViewCommand}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Icons/fitness.png" Width="24" Height="24" Margin="5"/>
+                            <TextBlock Text="Fitness" Style="{StaticResource menuButtonText}"/>
+                        </StackPanel>
+                    </RadioButton>
+
+                    <!-- Ernährung -->
+                    <RadioButton Style="{StaticResource menuButton}"
+                                 Command="{Binding ShowNutritionViewCommand}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Icons/food.png" Width="24" Height="24" Margin="5"/>
+                            <TextBlock Text="Ernährung" Style="{StaticResource menuButtonText}"/>
+                        </StackPanel>
+                    </RadioButton>
+
+                    <!-- Organisation -->
+                    <RadioButton Style="{StaticResource menuButton}"
+                                 Command="{Binding ShowOrganisationViewCommand}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Icons/organisation.png" Width="24" Height="24" Margin="5"/>
+                            <TextBlock Text="Organisation" Style="{StaticResource menuButtonText}"/>
+                        </StackPanel>
+                    </RadioButton>
+                </StackPanel>
+            </Border>
+
+            <!-- Main Content -->
+            <Border CornerRadius="0,10,10,0" Grid.Column="1">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="1,1" EndPoint="0,0">
+                        <GradientStop Color="{StaticResource primaryBackColor1}" Offset="0"/>
+                        <GradientStop Color="{StaticResource primaryBackColor2}" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- Control bar -->
+                    <StackPanel x:Name="pnlControlBar"
+                                Grid.Row="0"
+                                Orientation="Horizontal"
+                                FlowDirection="RightToLeft"
+                                Background="Transparent"
+                                Margin="0,0,5,0"
+                                MouseLeftButtonDown="pnlControlBar_MouseLeftButtonDown"
+                                MouseEnter="pnlControlBar_MouseEnter"/>
+                </Grid>
+            </Border>
         </Grid>
     </Border>
-
-    </Window>
+</Window>
