--- a/BeBetterApp/MainWindow.xaml
+++ b/BeBetterApp/MainWindow.xaml
@@ -106,7 +106,7 @@
 
                     <!-- Fitness -->
                     <RadioButton Style="{StaticResource menuButton}"
-                                 Command="{Binding ShowFitnessViewCommand}">
+                                 Checked="Button_Fitness">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="pack://application:,,,/Icons/fitness.png" Width="24" Height="24" Margin="5"/>
                             <TextBlock Text="Fitness" Style="{StaticResource menuButtonText}"/>
@@ -115,7 +115,7 @@
 
                     <!-- Ernährung -->
                     <RadioButton Style="{StaticResource menuButton}"
-                                 Command="{Binding ShowNutritionViewCommand}">
+                                 Command="{Binding ShowNutritionViewCommand}" Checked="Button_Ernaehrung">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="pack://application:,,,/Icons/food.png" Width="24" Height="24" Margin="5"/>
                             <TextBlock Text="Ernährung" Style="{StaticResource menuButtonText}"/>
@@ -124,7 +124,7 @@
 
                     <!-- Organisation -->
                     <RadioButton Style="{StaticResource menuButton}"
-                                 Command="{Binding ShowOrganisationViewCommand}">
+                                 Command="{Binding ShowOrganisationViewCommand}" Checked="RadioButton_Checked">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="pack://application:,,,/Icons/organisation.png" Width="24" Height="24" Margin="5"/>
                             <TextBlock Text="Organisation" Style="{StaticResource menuButtonText}"/>
