--- a/BeBetterApp/WindowSelect.xaml
+++ b/BeBetterApp/WindowSelect.xaml
@@ -8,7 +8,7 @@
         Title="WindowSelect" Height="700" Width="1300">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Einzelne Körpterteile trainieren" Width="550" Height="140" Margin="70" FontSize="38"/>
+            <Button Content="Einzelne Körpterteile trainieren" Width="550" Height="140" Margin="70" FontSize="38" Click="Button_Click"/>
             <Button Content="Erstelle einen Fitnessplan" Width="550" Height="140" FontSize="40"/>
         </StackPanel>
     </Grid>
