--- a/BeBetterApp/WindowSelect.xaml
+++ b/BeBetterApp/WindowSelect.xaml
@@ -56,19 +56,9 @@
 
             <Button Content="Erstelle einen Fitnessplan"
                     Width="550" Height="140"
-                    Style="{StaticResource roundMenuButton}"/>
+                    Style="{StaticResource roundMenuButton}" Click="Button_Click"/>
         </StackPanel>
-        <TextBlock x:Name="Textblock_Text"
-           Text="hallo"
-           TextWrapping="Wrap"
-           FontSize="20"
-           Margin="30"
-           Width="800"
-           Height="300"
-           HorizontalAlignment="Center"
-           VerticalAlignment="Bottom"
-           Background="LightGray"
-           Padding="10"/>
+        
     </Grid>
 </Window>
 
