--- a/BeBetterApp/WindowSelect.xaml
+++ b/BeBetterApp/WindowSelect.xaml
@@ -10,15 +10,10 @@
         Background="#FF1B1446">
 
     <Window.Resources>
-        <!-- Farben -->
-        <SolidColorBrush x:Key="titleColor2" Color="White"/>
-        <SolidColorBrush x:Key="color1" Color="#FFB3E5FC"/>
-        <SolidColorBrush x:Key="color2" Color="#FFB2DFDB"/>
-
-        <!-- Runder Button-Stil mit Farbverlauf und Hover -->
+        <!-- Style wie menuButton aus MainWindow -->
         <Style x:Key="roundMenuButton" TargetType="Button">
             <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Background" Value="{StaticResource color1}"/>
+            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="28"/>
             <Setter Property="BorderThickness" Value="0"/>
@@ -58,7 +53,5 @@
                     Width="550" Height="140"
                     Style="{StaticResource roundMenuButton}" Click="Button_Click"/>
         </StackPanel>
-        
     </Grid>
 </Window>
-
