--- a/BeBetterApp/WindowTrainingsplanerstellung.xaml
+++ b/BeBetterApp/WindowTrainingsplanerstellung.xaml
@@ -8,7 +8,7 @@
         Title="WindowTrainingsplanerstellung" Height="450" Width="800">
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="51,41,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <TextBox x:Name="Ausgabe" HorizontalAlignment="Left" Margin="51,93,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="660" Height="288"/>
+        <TextBox x:Name="Ausgabe" HorizontalAlignment="Left" Margin="51,93,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="660" Height="288" />
 
     </Grid>
 </Window>
