--- a/BeBetterApp/WindowTrainingsplanerstellung.xaml
+++ b/BeBetterApp/WindowTrainingsplanerstellung.xaml
@@ -7,8 +7,14 @@
         mc:Ignorable="d"
         Title="WindowTrainingsplanerstellung" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="51,41,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <TextBox x:Name="Ausgabe" HorizontalAlignment="Left" Margin="51,93,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="660" Height="288" />
+        <TextBox x:Name="Gewicht" Height="50" Width="150" Margin="43,53,607,331"   />
+        <TextBox x:Name="Größe" Height="50" Width="150" Margin="250,53,400,331"   />
+        <ComboBox x:Name="preferänz" Height="50" Width="150" Margin="454,53,196,331" >
+            <ComboBoxItem Content="abnehmen"></ComboBoxItem>
+            <ComboBoxItem Content="muskelaufbau"></ComboBoxItem>
+        </ComboBox>
+        <Button Content="Erstellen" HorizontalAlignment="Left" Margin="673,68,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <TextBox x:Name="Ausgabe" HorizontalAlignment="Center" Margin="0,136,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="660" Height="288" />
 
     </Grid>
 </Window>
