--- a/BeBetterApp/WindowEinzelneKoerperteileTrainieren.xaml
+++ b/BeBetterApp/WindowEinzelneKoerperteileTrainieren.xaml
@@ -5,7 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeBetterApp"
         mc:Ignorable="d"
-        Title="WindowEinzelneKoerperteileTrainieren" Height="450" Width="800">
+        Title="WindowEinzelneKoerperteileTrainieren" Height="450" Width="800"
+        WindowState="Maximized"
+        WindowStyle="None"
+        Background="Transparent"
+        AllowsTransparency="True">
+
+    <Window.Resources>
+        <!-- Farben -->
+        <Color x:Key="winBorderColor1">#FF1B1446</Color>
+        <Color x:Key="winBorderColor2">#FF1B1446</Color>
+        <Color x:Key="winBorderColor3">#FF1B1446</Color>
+
+        <Color x:Key="secondaryBackColor1">#FF1B1446</Color>
+        <Color x:Key="secondaryBackColor2">#FF1F1A4E</Color>
+
+        <Color x:Key="primaryBackColor1">#FF1B1446</Color>
+        <Color x:Key="primaryBackColor2">#FF1B1446</Color>
+
+        <SolidColorBrush x:Key="titleColor2" Color="White"/>
+        <SolidColorBrush x:Key="color1" Color="#FFB3E5FC"/>
+        <SolidColorBrush x:Key="color2" Color="#FFB2DFDB"/>
+    </Window.Resources>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -13,9 +35,42 @@
         </Grid.ColumnDefinitions>
 
 
-        <Grid Grid.Column="0">
-            <Image Source="pack://application:,,,/Icons/HumanBody.png" Margin="0,-7,0,7"/>
-        </Grid>
+
+
+        <Border Grid.Column="0">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0.7">
+                    <GradientStop Color="{StaticResource secondaryBackColor1}" Offset="0"/>
+                    <GradientStop Color="{StaticResource secondaryBackColor2}" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Image Source="pack://application:,,,/Icons/HumanBody.png"/>
+        </Border>
+
+        <Border CornerRadius="0,10,10,0" Grid.Column="1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="1,1" EndPoint="0,0">
+                    <GradientStop Color="{StaticResource primaryBackColor1}" Offset="0"/>
+                    <GradientStop Color="{StaticResource primaryBackColor2}" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="400"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="500"/>
+                </Grid.ColumnDefinitions>
+
+            </Grid>
+
+        </Border>
+
+        
+
 
 
 
