--- a/BeBetterApp/WindowEssensplanErstellung.xaml
+++ b/BeBetterApp/WindowEssensplanErstellung.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="BeBetterApp.WindowTrainingsplanerstellung"
+﻿<Window x:Class="BeBetterApp.WindowEssensplanErstellung"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeBetterApp"
         mc:Ignorable="d"
-        Title="WindowTrainingsplanerstellung" Height="450" Width="800" Background ="#FF1B1446"
+        Title="WindowEssensplanErstellung" Height="450" Width="800" Background ="#FF1B1446"
         WindowStyle="none"
-        WindowState="Maximized">
+        WindowState="Maximized"
+        >
     <Grid>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="2*"/>
@@ -26,7 +27,7 @@
             </ComboBox>
             <Button Margin="5" Content="Erstellen" HorizontalAlignment="Left" Grid.Row="0"  Height="50" Width="150" Click="Button_Click" Background="#FF1B1446" Foreground="White"/>
         </StackPanel>
-        
+
         <TextBox x:Name="Ausgabe" HorizontalAlignment="Center" Grid.Row="1"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="660" Height="288" Background="#FF1B1446" Foreground="White"  />
 
     </Grid>
