--- a/BeBetterApp/Kalorienzähler.xaml
+++ b/BeBetterApp/Kalorienzähler.xaml
@@ -2,9 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
-        Title="Kalorienzähler" Height="450" Width="800">
+        Title="Kalorienzähler" Height="450" Width="800"  Background ="#FF1B1446"
+        WindowStyle="none"
+        WindowState="Maximized">
 
     <Grid>
-        <lvc:PieChart/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        
+        <lvc:CartesianChart Series="{Binding Series}" Grid.Row="0"/>
+        <Button x:Name="Button_zurück" Content="zurück" HorizontalAlignment="Left" Grid.Row="1" Background="#FF1B1446" Click="Button_zurück_Click" ></Button>
+        <Button x:Name="Button_Tagadden" Content="zurück" HorizontalAlignment="Right" Grid.Row="1" Background="#FF1B1446" Click="Button_Tagadden_Click" ></Button>
     </Grid>
 </Window>
