--- a/BeBetterApp/BizepTraining.xaml
+++ b/BeBetterApp/BizepTraining.xaml
@@ -1,24 +1,45 @@
 ﻿<UserControl x:Class="BeBetterApp.BizepTraining"
-             xmlns:wpfAnimatedGif="http://wpfanimatedgif.codeplex.com"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BeBetterApp"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d">
 
-    <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" PanningMode="VerticalOnly">
-            <StackPanel Margin="20">
+    <Grid Background="Transparent">
+        <ScrollViewer VerticalScrollBarVisibility="Hidden"
+                      HorizontalScrollBarVisibility="Disabled"
+                      HorizontalContentAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      Padding="0" Margin="0">
 
-                <TextBlock Text="Übung 1" FontSize="30" FontWeight="Bold" Foreground="white" HorizontalAlignment="Center"/>
-                <Image x:Name="GifImage1" Height="300" Width="auto" />
+            <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
+                <!-- Übung 1 -->
+                <Border Background="#CC000000" CornerRadius="25" Padding="20" Margin="20" HorizontalAlignment="Stretch">
+                    <StackPanel>
+                        <TextBlock Text="Übung 1" FontSize="28" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+                        <Image x:Name="GifImage1" Stretch="Uniform" MaxHeight="550" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </Border>
 
-                <TextBlock Text="Übung 2" FontSize="30" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"/>
-                <Image x:Name="GifImage2" Height="300" Width="auto" />
-
-
+                <!-- Übung 2 -->
+                <Border Background="#CC000000"
+                        CornerRadius="25"
+                        Padding="20"
+                        Margin="20"
+                        HorizontalAlignment="Stretch">
+                    <StackPanel>
+                        <TextBlock Text="Übung 2"
+                                   FontSize="28"
+                                   FontWeight="Bold"
+                                   Foreground="White"
+                                   HorizontalAlignment="Center"
+                                   Margin="0,0,0,10"/>
+                        <Image x:Name="GifImage2"
+                               Stretch="Uniform"
+                               MaxHeight="550"
+                               HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </Border>
             </StackPanel>
         </ScrollViewer>
     </Grid>
