--- a/BeBetterApp/BizepTraining.xaml
+++ b/BeBetterApp/BizepTraining.xaml
@@ -6,11 +6,7 @@
              mc:Ignorable="d">
 
     <Grid Background="Transparent">
-        <ScrollViewer VerticalScrollBarVisibility="Hidden"
-                      HorizontalScrollBarVisibility="Disabled"
-                      HorizontalContentAlignment="Stretch"
-                      VerticalAlignment="Stretch"
-                      Padding="0" Margin="0">
+        <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch" VerticalAlignment="Stretch" Padding="0" Margin="0">
 
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
                 <!-- Übung 1 -->
@@ -22,22 +18,10 @@
                 </Border>
 
                 <!-- Übung 2 -->
-                <Border Background="#CC000000"
-                        CornerRadius="25"
-                        Padding="20"
-                        Margin="20"
-                        HorizontalAlignment="Stretch">
+                <Border Background="#CC000000" CornerRadius="25" Padding="20" Margin="20" HorizontalAlignment="Stretch">
                     <StackPanel>
-                        <TextBlock Text="Übung 2"
-                                   FontSize="28"
-                                   FontWeight="Bold"
-                                   Foreground="White"
-                                   HorizontalAlignment="Center"
-                                   Margin="0,0,0,10"/>
-                        <Image x:Name="GifImage2"
-                               Stretch="Uniform"
-                               MaxHeight="550"
-                               HorizontalAlignment="Center"/>
+                        <TextBlock Text="Übung 2" FontSize="28" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+                        <Image x:Name="GifImage2" Stretch="Uniform" MaxHeight="550" HorizontalAlignment="Center"/>
                     </StackPanel>
                 </Border>
             </StackPanel>
